--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,13 @@
 /* Shared styles across all components */
 
+:root {
+  --main-text-color: black;
+  --accent-color: rgb(175, 255, 151);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'DotGothic16', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
