3d pointer click event fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,10 +5,6 @@
   --accent-color: rgb(175, 255, 151);
 }
 
-main {
-  pointer-events: none;
-}
-
 body {
   margin: 0;
   font-family: 'DotGothic16', sans-serif;
@@ -31,4 +27,8 @@ button:hover {
 
 .hidden {
   display: none !important;
+}
+
+#text-animation-main {
+  pointer-events: none;
 }
