--- a/styles/index.css
+++ b/styles/index.css
@@ -39,3 +39,12 @@ button:hover {
 #text-animation-main {
   pointer-events: none;
 }
+
+#beat-reactor {
+  background-color: var(--accent-color);
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  border-radius: 100px;
+  transition: 100ms;
+}
