added postprocessing beginnings

--- a/styles/lyrics.css
+++ b/styles/lyrics.css
@@ -15,6 +15,7 @@ footer {
   background-color: var(--accent-color);
 }
 
+/* Inspiration of text styling from: https://codepen.io/matthiasott/pen/aQxBOB */
 .lyric {
   position: relative;
   margin: 0;
