--- a/styles/index.css
+++ b/styles/index.css
@@ -20,24 +20,55 @@ code {
 
 button {
   padding: 0.7em;
+  background: none;
+  border: none;
+  text-shadow: white 1px 0 5px;
+  transition: 200ms;
+  color: white;
 }
 
 button:hover {
   cursor: pointer;
 }
 
+button:active {
+  scale: 1.3;
+}
+
 .grid {
   display: grid;
-  grid-template-columns: 5.5% auto 11%;
+  grid-template-rows: auto;
+  transition: 200ms;
+}
+
+.non-chorus {
+  grid-template-columns: 5.5% auto 16.5%;
+}
+
+.chorus {
+  grid-template-columns: 11% auto 11%;
 }
 
 .col1 {
   grid-column-start: 1;
 }
 
+.col2 {
+  grid-column-start: 2;
+}
+
 .col3 {
   grid-column-start: 3;
 }
+
+/* .start-row2 {
+  grid-row-start: 2;
+}
+
+.all-rows {
+  grid-row-start: 1;
+  grid-row-end: 3;
+} */
 
 .hidden {
   display: none !important;
@@ -58,6 +89,14 @@ button:hover {
 
 .full-screen:not(#loading) {
   pointer-events: none;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
 
 #beat-reactor {
