--- a/styles/index.css
+++ b/styles/index.css
@@ -99,6 +99,14 @@ button:active {
   'opsz' 48
 }
 
+.hidden {
+  visibility: hidden;
+}
+
+.shown {
+  visibility: visible;
+}
+
 #beat-reactor {
   background-color: var(--accent-color);
   width: 100px;
