--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
-  background-color: rgb(12, 12, 12);
+  background-color: rgb(34, 34, 34);
 }
 
 body, button {
@@ -44,6 +44,17 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 38px;
+}
+
+footer span, footer .material-symbols-outlined {
+  font-size: 14px;
+}
+
+footer button {
+  border-radius: 0;
+  margin: 5px;
+  padding: 2px 10px;
 }
 
 .grid {
@@ -165,8 +176,8 @@ footer {
 }
 
 #control {
-  left: 0;
-  bottom: 0;
+  left: 10px;
+  bottom: 50px;
   height: min-content;
 }
 
@@ -182,14 +193,21 @@ footer {
   color: var(--default-color);
 }
 
-footer button {
-  border-radius: 0;
-}
-
 #beat-reactor {
   background-color: var(--accent-color);
   width: 100px;
   height: 100px;
   position: absolute;
   border-radius: 100px;
+}
+
+#miku-profile {
+  width: 20vw;
+  bottom: 50px;
+  right: 10px;
+}
+
+#miku-profile img {
+  width: 100%;
+  object-fit: cover;
 }
