--- a/styles/index.css
+++ b/styles/index.css
@@ -41,14 +41,42 @@ button:active {
 }
 
 footer {
-  background-color: var(--accent-color);
+  background-color: rgba(9, 9, 9, 0.5);
+  border-radius: 10px;
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 38px;
+  left: 0;
+  width: min-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  padding: 2px;
 }
 
-footer span, footer .material-symbols-outlined {
+footer button {
+  background-color: transparent;
+  border: none;
+}
+
+footer span {
+  color: var(--default-white);
+}
+
+footer #play-btn, footer #pause-btn, footer #reset-btn {
+  border-radius: 50px;
+  padding: 2px;
+}
+
+footer #play-btn span, footer #pause-btn span {
+  font-size: 2.9em;
+}
+
+footer #reset-btn span {
+  font-size: 2.1em;
+}
+
+/* footer span, footer .material-symbols-outlined {
   font-size: 14px;
 }
 
@@ -56,7 +84,7 @@ footer button {
   border-radius: 0;
   margin: 5px;
   padding: 2px 10px;
-}
+} */
 
 .grid {
   display: grid;
