--- a/styles/index.css
+++ b/styles/index.css
@@ -40,52 +40,6 @@ button:active {
   filter: contrast(0.7);
 }
 
-footer {
-  background-color: rgba(9, 9, 9, 0.5);
-  border-radius: 10px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: min-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 5px;
-  padding: 2px;
-}
-
-footer button {
-  background-color: transparent;
-  border: none;
-}
-
-footer span {
-  color: var(--default-white);
-}
-
-footer #play-btn, footer #pause-btn, footer #reset-btn {
-  border-radius: 50px;
-  padding: 2px;
-}
-
-footer #play-btn span, footer #pause-btn span {
-  font-size: 2.9em;
-}
-
-footer #reset-btn span {
-  font-size: 2.1em;
-}
-
-/* footer span, footer .material-symbols-outlined {
-  font-size: 14px;
-}
-
-footer button {
-  border-radius: 0;
-  margin: 5px;
-  padding: 2px 10px;
-} */
-
 .grid {
   display: grid;
   grid-template-rows: auto;
@@ -133,6 +87,10 @@ footer button {
   pointer-events: none;
 }
 
+#graphic-grid nav {
+  pointer-events: auto;
+}
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -147,6 +105,10 @@ footer button {
 
 .shown {
   visibility: visible;
+}
+
+.graphic-box {
+  border: var(--accent-color) 2px solid;
 }
 
 .window, .window-body, .window button {
@@ -203,24 +165,6 @@ footer button {
   color: var(--default-white);
 }
 
-#control {
-  left: 10px;
-  bottom: 50px;
-  height: min-content;
-}
-
-#control > .window-body {
-  display: flex;
-  color: var(--default-color);
-}
-
-#control .window-body > button {
-  border-radius: 0;
-  border-width: 1px;
-  background-color: var(--default-white);
-  color: var(--default-color);
-}
-
 #miku-profile {
   width: 20vw;
   bottom: 50px;
@@ -231,4 +175,40 @@ footer button {
 #miku-profile img {
   width: 100%;
   object-fit: cover;
+}
+
+#graphic-grid {
+  grid-template-columns: repeat(15, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  gap: 1em;
+}
+
+#graphic-grid > nav {
+  grid-column: 4 / span 5;
+  grid-row: 9 / span 1;
+}
+
+#graphic-grid > nav > button {
+  background: none;
+  padding: 0;
+  border: none;
+}
+
+#graphic-grid > nav span {
+  font-size: 2.9em;
+}
+
+#miku-scene {
+  grid-column: 4 / span 5;
+  grid-row: 3 / span 6;
+}
+
+#wave-scene {
+  grid-column: 9 / span 4;
+  grid-row: 3 / span 2;
+}
+
+#text-box {
+  grid-column: 9 / span 4;
+  grid-row: 5 / span 4;
 }
