--- a/styles/index.css
+++ b/styles/index.css
@@ -164,7 +164,7 @@ button:active {
   margin: 5px 10px;
   color: var(--default-white);
 }
-
+/* 
 #miku-profile {
   width: 20vw;
   bottom: 50px;
@@ -175,7 +175,7 @@ button:active {
 #miku-profile img {
   width: 100%;
   object-fit: cover;
-}
+} */
 
 #graphic-grid {
   grid-template-columns: repeat(15, 1fr);
@@ -195,20 +195,27 @@ button:active {
 }
 
 #graphic-grid > nav span {
-  font-size: 2.9em;
+  font-size: 2.1em;
 }
 
 #miku-scene {
-  grid-column: 4 / span 5;
+  grid-column: 8 / span 5;
   grid-row: 3 / span 6;
+  position: relative;
 }
 
 #wave-scene {
-  grid-column: 9 / span 4;
+  grid-column: 4 / span 4;
   grid-row: 3 / span 2;
 }
 
 #text-box {
-  grid-column: 9 / span 4;
+  grid-column: 4 / span 4;
   grid-row: 5 / span 4;
+  position: relative;
+  overflow: hidden;
+}
+
+#graphic-bottom-right {
+  
 }
