--- a/styles/index.css
+++ b/styles/index.css
@@ -231,5 +231,7 @@ button:active {
   background: radial-gradient(farthest-corner circle at 70% 80%, #FF00FF 5%, transparent 50%, transparent),
   radial-gradient(farthest-corner circle at 0px 0px, #00FFFF 10%, transparent 46%, transparent),
   radial-gradient(farthest-corner circle at 30% 100%, #FFFF00 10%, transparent 80%, transparent),
-  radial-gradient(farthest-corner circle at 100% 0px, #28FFFF 10%, transparent 50%, transparent);
+  radial-gradient(farthest-corner circle at 100% 0px, #28FFFF 10%, transparent 50%, transparent),
+  radial-gradient(farthest-corner circle at 100% 100%, #28ff7a 5%, transparent 70%, transparent);
+  background-size: 115% 115%;
 }
