--- a/styles/index.css
+++ b/styles/index.css
@@ -184,8 +184,8 @@ button:active {
 }
 
 #graphic-grid > nav {
-  grid-column: 4 / span 5;
-  grid-row: 9 / span 1;
+  grid-column: 4 / span 7;
+  grid-row: 2 / span 1;
 }
 
 #graphic-grid > nav > button {
@@ -224,6 +224,29 @@ button:active {
 
 #graphic-bottom-right p {
   margin: 0;
+}
+
+#y2k-text {
+  grid-column: 4 / span 5;
+  grid-row: 9 / span 1;
+  margin: 0;
+  transform: translateY(-50px);
+}
+
+.y2k-text-style {
+  font-size: 2.5em;
+  text-shadow: 
+  1px 1px 0 #ddd,
+  2px 2px 0 #c8c8c8,
+  3px 3px 0 #ccc,
+  4px 4px 0 #b8b8b8,
+  4px 4px 0 #bbb,
+  0px 1px 1px rgba(0,0,0,.4),
+  0px 2px 2px rgba(0,0,0,.3),
+  -1px 3px 3px rgba(0,0,0,.2),
+  -1px 5px 5px rgba(0,0,0,.1),
+  -2px 8px 8px rgba(0,0,0,.1),
+  -2px 13px 13px rgba(0,0,0,.1);
 }
 
 #bg-texture {
