--- a/styles/index.css
+++ b/styles/index.css
@@ -108,7 +108,10 @@ button:active {
 }
 
 .graphic-box {
-  border: var(--accent-color) 2px solid;
+  border: var(--accent-color) 3px solid;
+  box-shadow: var(--accent-color) 1px 1px 5px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .window, .window-body, .window button {
@@ -213,7 +216,6 @@ button:active {
   grid-column: 4 / span 4;
   grid-row: 5 / span 4;
   position: relative;
-  overflow: hidden;
 }
 
 #graphic-bottom-right {
@@ -234,24 +236,52 @@ button:active {
 }
 
 .y2k-text-style {
-  font-size: 2.5em;
-  text-shadow: 
-  1px 1px 0 #ddd,
-  2px 2px 0 #c8c8c8,
-  3px 3px 0 #ccc,
-  4px 4px 0 #b8b8b8,
-  4px 4px 0 #bbb,
-  0px 1px 1px rgba(0,0,0,.4),
-  0px 2px 2px rgba(0,0,0,.3),
-  -1px 3px 3px rgba(0,0,0,.2),
-  -1px 5px 5px rgba(0,0,0,.1),
-  -2px 8px 8px rgba(0,0,0,.1),
-  -2px 13px 13px rgba(0,0,0,.1);
+  font-family: 'Dela Gothic One', cursive;
+  font-size: 2.9vw;
+}
+
+.y2k-text-style span {
+  display: inline-block;
+  background: linear-gradient(24deg, rgb(71, 145, 255), #ff5eff);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  color: transparent;
+  transform: skew(-27deg);
+  filter: 
+  contrast(200%)
+  brightness(200%)
+  drop-shadow(-2px 0 var(--accent-color))
+  drop-shadow(0px -2px 0 var(--accent-color))
+  drop-shadow(0px 1px 0 var(--light-accent))
+  drop-shadow(0px 2px 0 var(--light-accent))
+  drop-shadow(1px 0px 0 var(--light-accent))
+  drop-shadow(2px 0px 0 var(--light-accent))
+  drop-shadow(-1px 0px 0 var(--light-accent))
+  drop-shadow(-1px -1px 0 var(--light-accent))
+  drop-shadow(-2px -2px 0 var(--light-accent))
+  drop-shadow(-1px 1px 0 var(--light-accent))
+  drop-shadow(-2px 2px 0 var(--light-accent))
+  drop-shadow(1px -1px 0 var(--light-accent))
+  drop-shadow(2px -2px 0 var(--light-accent))
+  drop-shadow(1px 1px 0 var(--light-accent))
+  drop-shadow(2px 2px 0 var(--light-accent))
+  drop-shadow(4px 4px 0 var(--accent-color))
+  drop-shadow(5px 5px 0 var(--accent-color))
+  drop-shadow(6px 6px 0 var(--accent-color))
+  drop-shadow(7px 7px 0 var(--accent-color))
+  
+  drop-shadow(0px 1px 1px rgba(225,0,0,.4))
+  drop-shadow(0px 2px 2px rgba(225,0,0,.3))
+  drop-shadow(-1px 3px 3px rgba(0,225,0,.2))
+  drop-shadow(-1px 5px 5px rgba(0,225,0,.1))
+  drop-shadow(-2px 8px 8px rgba(0,225,225,.1))
+  drop-shadow(-2px 13px 13px rgba(0,225,225,.1));
 }
 
 #bg-texture {
   /* filter: contrast(200%) brightness(150%); */
-  background: radial-gradient(farthest-corner circle at 70% 80%, #FF00FF 5%, transparent 50%, transparent),
+  background: radial-gradient(farthest-corner circle at 70% 80%, #ff44ff 5%, transparent 50%, transparent),
   radial-gradient(farthest-corner circle at 0px 0px, #00FFFF 10%, transparent 46%, transparent),
   radial-gradient(farthest-corner circle at 30% 100%, #FFFF00 10%, transparent 80%, transparent),
   radial-gradient(farthest-corner circle at 100% 0px, #28FFFF 10%, transparent 50%, transparent),
